FIX: fixed background colour to match notion dark mode

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	justify-content: center;
 	align-items: center;
 
-	background-color: rgb(47, 52, 55);
+	background-color: #191919;
 	margin: 0px;
 }
 
